[tool.poetry]
name = "retwitter"
version = "0.1.0"
description = ""
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
