[tool.poetry]
name = "retwitter"
version = "0.1.0"
description = ""
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.0"
requests-oauthlib = "^1.3.1"
twikit = "^1.1.29"
retry = "^0.9.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
