[project]
name = "retwitter"
version = "0.2.0"
description = ""
authors = [
    { name = "Lorenzo Carbonell <atareao@atareao.es", email = "lorenzo.carbonell.cerezo@gmail.com" }
]
dependencies = [
    "requests-oauthlib>=2.0.0",
    "twikit>=2.1.3",
    "retry>=0.9.2",
    "aiohttp>=3.10.8",
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["retwitter"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "D401"  # imperative mood
]

[tool.ruff.lint.pydocstyle]
convention = "google"

